# BlackStory2

./: .claudeignore  .env.example  .gitignore  README.md  main.py  pyproject.toml
.clinerules/: generar
src/display/: gui.py  terminal.py  ui.py
src/game/: enums.py  events.py  interfaces.py  orchestrator.py  prompts.py  providers_factory.py
src/providers/: base.py  gemini.py  ollama.py
src/storage/: models.py  saver.py
src/storage/formats/: json.py  markdown.py  txt.py
